[gd_scene load_steps=18 format=2]

[ext_resource path="res://scenes/gui/Screens.gd" type="Script" id=1]
[ext_resource path="res://scenes/gui/Labels/TitleText.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/Ren/nodes/ren_var_label.gd" type="Script" id=3]
[ext_resource path="res://addons/Ren/icons/ren_var_label.svg" type="Texture" id=4]
[ext_resource path="res://scenes/gui/QuickMenuButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/gui/SlotBox.tscn" type="PackedScene" id=6]
[ext_resource path="res://ubuntu-font-family/Ubuntu-B.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://scenes/gui/History.gd" type="Script" id=8]
[ext_resource path="res://scenes/gui/HistoryItem.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/gui/OptionsBox.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/gui/QuestsBox.tscn" type="PackedScene" id=11]
[ext_resource path="res://scenes/gui/Labels/dialogue_text.tscn" type="PackedScene" id=12]
[ext_resource path="res://scenes/examples/TestNodes.tscn" type="PackedScene" id=13]

[sub_resource type="ButtonGroup" id=1]

resource_local_to_scene = true

[sub_resource type="DynamicFont" id=2]

size = 40
use_mipmaps = false
use_filter = true
font_data = ExtResource( 7 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=3]

size = 22
use_mipmaps = false
use_filter = true
font_data = ExtResource( 7 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=4]

size = 22
use_mipmaps = false
use_filter = true
font_data = ExtResource( 7 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="Screens" type="Node2D" index="0"]

script = ExtResource( 1 )
_sections_unfolded = [ "Material", "Theme", "Visibility" ]

[node name="Panel" type="Panel" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1.0
margin_top = 1.0
margin_right = 1028.0
margin_bottom = 610.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="MainMenuDecorations" type="Control" parent="." index="1"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="TitleNVersion" type="Control" parent="MainMenuDecorations" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="HBox" type="HBoxContainer" parent="MainMenuDecorations/TitleNVersion" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 867.0
margin_top = 532.0
margin_right = 1008.0
margin_bottom = 589.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="Title" parent="MainMenuDecorations/TitleNVersion/HBox" index="0" instance=ExtResource( 2 )]

margin_right = 91.0
margin_bottom = 57.0
rect_clip_content = false

[node name="RenValLabel" type="Label" parent="MainMenuDecorations/TitleNVersion/HBox" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 95.0
margin_top = 21.0
margin_right = 127.0
margin_bottom = 35.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "0.5.0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script = ExtResource( 3 )
__meta__ = {
"_editor_icon": ExtResource( 4 )
}
var_name = "version"
default = "0.5.0"
type = "str"

[node name="Navigation" type="Panel" parent="." index="2"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 204.0
margin_bottom = 599.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect" ]

[node name="Label" parent="Navigation" index="0" instance=ExtResource( 2 )]

margin_right = 99.0
margin_bottom = 65.0
rect_clip_content = false
align = 0

[node name="ScrollContainer" type="ScrollContainer" parent="Navigation" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 5.0
margin_top = 109.0
margin_right = 213.0
margin_bottom = 598.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
scroll_horizontal_enabled = true
scroll_horizontal = 0
scroll_vertical_enabled = true
scroll_vertical = 0
scroll_deadzone = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Navigation/ScrollContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 132.0
margin_bottom = 364.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 20
alignment = 0
_sections_unfolded = [ "Mouse", "Size Flags" ]

[node name="Hack" type="Control" parent="Navigation/ScrollContainer/VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 132.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="NewGame" parent="Navigation/ScrollContainer/VBoxContainer" index="1" instance=ExtResource( 5 )]

margin_top = 20.0
margin_right = 132.0
margin_bottom = 52.0
text = "New Game"
align = 0

[node name="Return" parent="Navigation/ScrollContainer/VBoxContainer" index="2" instance=ExtResource( 5 )]

visible = false
margin_top = 20.0
margin_right = 140.0
margin_bottom = 52.0
text = "Return"
align = 0

[node name="History" parent="Navigation/ScrollContainer/VBoxContainer" index="3" instance=ExtResource( 5 )]

visible = false
margin_top = 72.0
margin_right = 140.0
margin_bottom = 104.0
toggle_mode = true
group = SubResource( 1 )
text = "History"
align = 0

[node name="Quests" parent="Navigation/ScrollContainer/VBoxContainer" index="4" instance=ExtResource( 5 )]

visible = false
margin_top = 72.0
margin_right = 140.0
margin_bottom = 104.0
toggle_mode = true
group = SubResource( 1 )
text = "Quests"
align = 0

[node name="Continue" parent="Navigation/ScrollContainer/VBoxContainer" index="5" instance=ExtResource( 5 )]

margin_top = 72.0
margin_right = 132.0
margin_bottom = 104.0
text = "Continue"
align = 0

[node name="Load" parent="Navigation/ScrollContainer/VBoxContainer" index="6" instance=ExtResource( 5 )]

margin_top = 124.0
margin_right = 132.0
margin_bottom = 156.0
toggle_mode = true
group = SubResource( 1 )
text = "Load"
align = 0

[node name="Save" parent="Navigation/ScrollContainer/VBoxContainer" index="7" instance=ExtResource( 5 )]

visible = false
margin_top = 280.0
margin_right = 140.0
margin_bottom = 312.0
toggle_mode = true
group = SubResource( 1 )
text = "Save"
align = 0

[node name="Options" parent="Navigation/ScrollContainer/VBoxContainer" index="8" instance=ExtResource( 5 )]

margin_top = 176.0
margin_right = 132.0
margin_bottom = 208.0
toggle_mode = true
group = SubResource( 1 )
text = "Options"
align = 0

[node name="TestNodes" parent="Navigation/ScrollContainer/VBoxContainer" index="9" instance=ExtResource( 5 )]

margin_top = 228.0
margin_right = 132.0
margin_bottom = 260.0
toggle_mode = true
group = SubResource( 1 )
text = "Test Nodes"
align = 0

[node name="About" parent="Navigation/ScrollContainer/VBoxContainer" index="10" instance=ExtResource( 5 )]

margin_top = 280.0
margin_right = 132.0
margin_bottom = 312.0
toggle_mode = true
group = SubResource( 1 )
text = "About"
align = 0

[node name="Help" parent="Navigation/ScrollContainer/VBoxContainer" index="11" instance=ExtResource( 5 )]

visible = false
margin_top = 488.0
margin_right = 140.0
margin_bottom = 520.0
toggle_mode = true
group = SubResource( 1 )
text = "Help"
align = 0

[node name="Quit" parent="Navigation/ScrollContainer/VBoxContainer" index="12" instance=ExtResource( 5 )]

margin_top = 332.0
margin_right = 132.0
margin_bottom = 364.0
toggle_mode = true
group = SubResource( 1 )
text = "Quit"
align = 0

[node name="SlotBox" parent="." index="3" instance=ExtResource( 6 )]

[node name="HistoryBox" type="VBoxContainer" parent="." index="4"]

editor/display_folded = true
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 257.0
margin_top = 11.0
margin_right = 959.0
margin_bottom = 545.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="Title" type="Label" parent="HistoryBox" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 702.0
margin_bottom = 54.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
text = "History"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="ScrollContainer" type="ScrollContainer" parent="HistoryBox" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 58.0
margin_right = 702.0
margin_bottom = 534.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false
scroll_horizontal = 0
scroll_vertical_enabled = true
scroll_vertical = 0
scroll_deadzone = 0
_sections_unfolded = [ "Scroll" ]

[node name="History" type="VBoxContainer" parent="HistoryBox/ScrollContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 702.0
margin_bottom = 476.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 5
alignment = 0
script = ExtResource( 8 )
_sections_unfolded = [ "Size Flags", "custom_constants" ]
HistoryItemTemplate = ExtResource( 9 )

[node name="OptionsBox" parent="." index="5" instance=ExtResource( 10 )]

visible = false
margin_left = 492.0
margin_top = 23.0
margin_right = 709.0
margin_bottom = 396.0

[node name="QuestsBox" parent="." index="6" instance=ExtResource( 11 )]

visible = false
margin_left = 201.0
margin_top = 2.0
margin_right = 1025.0
margin_bottom = 607.0

[node name="QuitBox" type="Panel" parent="." index="7"]

editor/display_folded = true
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 257.0
margin_top = 11.0
margin_right = 959.0
margin_bottom = 545.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Title" type="Label" parent="QuitBox" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 702.0
margin_bottom = 46.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
text = "Quit"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="Question" parent="QuitBox" index="1" instance=ExtResource( 12 )]

anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 12.0
margin_top = -128.0
margin_right = 12.0
margin_bottom = -82.0
focus_mode = 0
bbcode_text = "[center]Do you realy want to quit?[/center]"
text = "Do you realy want to quit?"
selection_enabled = false

[node name="HBoxContainer" type="HBoxContainer" parent="QuitBox" index="2"]

anchor_left = 0.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 246.0
margin_top = -328.0
margin_right = -200.0
margin_bottom = -296.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="Yes" type="Button" parent="QuitBox/HBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 126.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Yes"
flat = true
align = 1
_sections_unfolded = [ "Size Flags", "custom_fonts" ]

[node name="No" type="Button" parent="QuitBox/HBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 130.0
margin_right = 256.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "No"
flat = true
align = 1
_sections_unfolded = [ "Size Flags", "custom_fonts" ]

[node name="TestNodes" parent="." index="8" instance=ExtResource( 13 )]

visible = false
margin_right = 672.0
margin_bottom = 315.0

[connection signal="pressed" from="Navigation/ScrollContainer/VBoxContainer/Return" to="." method="_on_Return_pressed"]

[connection signal="pressed" from="Navigation/ScrollContainer/VBoxContainer/Load" to="." method="_on_Load_pressed"]

[connection signal="pressed" from="QuitBox/HBoxContainer/No" to="." method="_on_Return_pressed"]


